trunk/antlr-generated/phdl/PHDLParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\work\\phdl\\src\\phdl\\PHDL.g 2011-05-31 16:01:01

  package phdl;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class PHDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "STRING_LITERAL", "INT", "CHAR", "DIGIT", "COMMA", "WHITESPACE", "LINE_COMMENT", "MULTILINE_COMMENT", "'design'", "'is'", "'begin'", "'end'", "';'", "'configuration'", "'device'", "'net'", "':'", "'='", "'['", "']'", "'inst'", "'subSch'", "'in'", "'out'", "'inout'", "'pass'", "'sup'", "'pwr'", "'open'", "'pin'"
    };
    public static final int EOF=-1;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int IDENT=4;
    public static final int STRING_LITERAL=5;
    public static final int INT=6;
    public static final int CHAR=7;
    public static final int DIGIT=8;
    public static final int COMMA=9;
    public static final int WHITESPACE=10;
    public static final int LINE_COMMENT=11;
    public static final int MULTILINE_COMMENT=12;

    // delegates
    // delegators


        public PHDLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PHDLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PHDLParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\work\\phdl\\src\\phdl\\PHDL.g"; }


    public static class sourceText_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sourceText"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:21:1: sourceText : design EOF ;
    public final PHDLParser.sourceText_return sourceText() throws RecognitionException {
        PHDLParser.sourceText_return retval = new PHDLParser.sourceText_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        PHDLParser.design_return design1 = null;


        CommonTree EOF2_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:24:2: ( design EOF )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:25:3: design EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_design_in_sourceText61);
            design1=design();

            state._fsp--;

            adaptor.addChild(root_0, design1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_sourceText65); 
            EOF2_tree = (CommonTree)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sourceText"

    public static class design_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "design"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:29:1: design : 'design' IDENT 'is' ( deviceDecl | netDecl )* 'begin' instantiations 'end' ';' ;
    public final PHDLParser.design_return design() throws RecognitionException {
        PHDLParser.design_return retval = new PHDLParser.design_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal3=null;
        Token IDENT4=null;
        Token string_literal5=null;
        Token string_literal8=null;
        Token string_literal10=null;
        Token char_literal11=null;
        PHDLParser.deviceDecl_return deviceDecl6 = null;

        PHDLParser.netDecl_return netDecl7 = null;

        PHDLParser.instantiations_return instantiations9 = null;


        CommonTree string_literal3_tree=null;
        CommonTree IDENT4_tree=null;
        CommonTree string_literal5_tree=null;
        CommonTree string_literal8_tree=null;
        CommonTree string_literal10_tree=null;
        CommonTree char_literal11_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:35:2: ( 'design' IDENT 'is' ( deviceDecl | netDecl )* 'begin' instantiations 'end' ';' )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:35:4: 'design' IDENT 'is' ( deviceDecl | netDecl )* 'begin' instantiations 'end' ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal3=(Token)match(input,13,FOLLOW_13_in_design79); 
            string_literal3_tree = (CommonTree)adaptor.create(string_literal3);
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal3_tree, root_0);

            IDENT4=(Token)match(input,IDENT,FOLLOW_IDENT_in_design82); 
            IDENT4_tree = (CommonTree)adaptor.create(IDENT4);
            adaptor.addChild(root_0, IDENT4_tree);

            string_literal5=(Token)match(input,14,FOLLOW_14_in_design84); 
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:37:3: ( deviceDecl | netDecl )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==19) ) {
                    alt1=1;
                }
                else if ( (LA1_0==20) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:37:4: deviceDecl
            	    {
            	    pushFollow(FOLLOW_deviceDecl_in_design93);
            	    deviceDecl6=deviceDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, deviceDecl6.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:37:17: netDecl
            	    {
            	    pushFollow(FOLLOW_netDecl_in_design97);
            	    netDecl7=netDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, netDecl7.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            string_literal8=(Token)match(input,15,FOLLOW_15_in_design103); 
            string_literal8_tree = (CommonTree)adaptor.create(string_literal8);
            adaptor.addChild(root_0, string_literal8_tree);

            pushFollow(FOLLOW_instantiations_in_design107);
            instantiations9=instantiations();

            state._fsp--;

            adaptor.addChild(root_0, instantiations9.getTree());
            string_literal10=(Token)match(input,16,FOLLOW_16_in_design111); 
            char_literal11=(Token)match(input,17,FOLLOW_17_in_design114); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "design"

    public static class configuration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "configuration"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:43:1: configuration : 'configuration' cfgName 'is' ( ( cfgAttr ',' )* cfgAttr )+ 'end' ';' ;
    public final PHDLParser.configuration_return configuration() throws RecognitionException {
        PHDLParser.configuration_return retval = new PHDLParser.configuration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal12=null;
        Token string_literal14=null;
        Token char_literal16=null;
        Token string_literal18=null;
        Token char_literal19=null;
        PHDLParser.cfgName_return cfgName13 = null;

        PHDLParser.cfgAttr_return cfgAttr15 = null;

        PHDLParser.cfgAttr_return cfgAttr17 = null;


        CommonTree string_literal12_tree=null;
        CommonTree string_literal14_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree string_literal18_tree=null;
        CommonTree char_literal19_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:46:2: ( 'configuration' cfgName 'is' ( ( cfgAttr ',' )* cfgAttr )+ 'end' ';' )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:46:4: 'configuration' cfgName 'is' ( ( cfgAttr ',' )* cfgAttr )+ 'end' ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal12=(Token)match(input,18,FOLLOW_18_in_configuration129); 
            string_literal12_tree = (CommonTree)adaptor.create(string_literal12);
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal12_tree, root_0);

            pushFollow(FOLLOW_cfgName_in_configuration132);
            cfgName13=cfgName();

            state._fsp--;

            adaptor.addChild(root_0, cfgName13.getTree());
            string_literal14=(Token)match(input,14,FOLLOW_14_in_configuration134); 
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:47:3: ( ( cfgAttr ',' )* cfgAttr )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==IDENT) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:47:4: ( cfgAttr ',' )* cfgAttr
            	    {
            	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:47:4: ( cfgAttr ',' )*
            	    loop2:
            	    do {
            	        int alt2=2;
            	        int LA2_0 = input.LA(1);

            	        if ( (LA2_0==IDENT) ) {
            	            int LA2_1 = input.LA(2);

            	            if ( (LA2_1==COMMA) ) {
            	                alt2=1;
            	            }


            	        }


            	        switch (alt2) {
            	    	case 1 :
            	    	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:47:5: cfgAttr ','
            	    	    {
            	    	    pushFollow(FOLLOW_cfgAttr_in_configuration141);
            	    	    cfgAttr15=cfgAttr();

            	    	    state._fsp--;

            	    	    adaptor.addChild(root_0, cfgAttr15.getTree());
            	    	    char_literal16=(Token)match(input,COMMA,FOLLOW_COMMA_in_configuration143); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop2;
            	        }
            	    } while (true);

            	    pushFollow(FOLLOW_cfgAttr_in_configuration148);
            	    cfgAttr17=cfgAttr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, cfgAttr17.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            string_literal18=(Token)match(input,16,FOLLOW_16_in_configuration154); 
            char_literal19=(Token)match(input,17,FOLLOW_17_in_configuration157); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "configuration"

    public static class cfgName_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "cfgName"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:51:1: cfgName : IDENT ;
    public final PHDLParser.cfgName_return cfgName() throws RecognitionException {
        PHDLParser.cfgName_return retval = new PHDLParser.cfgName_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT20=null;

        CommonTree IDENT20_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:54:2: ( IDENT )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:54:4: IDENT
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENT20=(Token)match(input,IDENT,FOLLOW_IDENT_in_cfgName172); 
            IDENT20_tree = (CommonTree)adaptor.create(IDENT20);
            adaptor.addChild(root_0, IDENT20_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "cfgName"

    public static class cfgAttr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "cfgAttr"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:57:1: cfgAttr : IDENT ;
    public final PHDLParser.cfgAttr_return cfgAttr() throws RecognitionException {
        PHDLParser.cfgAttr_return retval = new PHDLParser.cfgAttr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT21=null;

        CommonTree IDENT21_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:60:2: ( IDENT )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:60:4: IDENT
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENT21=(Token)match(input,IDENT,FOLLOW_IDENT_in_cfgAttr186); 
            IDENT21_tree = (CommonTree)adaptor.create(IDENT21);
            adaptor.addChild(root_0, IDENT21_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "cfgAttr"

    public static class deviceDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "deviceDecl"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:63:1: deviceDecl : 'device' deviceName 'is' attrDecl 'begin' pinDecl 'end' ';' ;
    public final PHDLParser.deviceDecl_return deviceDecl() throws RecognitionException {
        PHDLParser.deviceDecl_return retval = new PHDLParser.deviceDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal22=null;
        Token string_literal24=null;
        Token string_literal26=null;
        Token string_literal28=null;
        Token char_literal29=null;
        PHDLParser.deviceName_return deviceName23 = null;

        PHDLParser.attrDecl_return attrDecl25 = null;

        PHDLParser.pinDecl_return pinDecl27 = null;


        CommonTree string_literal22_tree=null;
        CommonTree string_literal24_tree=null;
        CommonTree string_literal26_tree=null;
        CommonTree string_literal28_tree=null;
        CommonTree char_literal29_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:69:2: ( 'device' deviceName 'is' attrDecl 'begin' pinDecl 'end' ';' )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:69:4: 'device' deviceName 'is' attrDecl 'begin' pinDecl 'end' ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal22=(Token)match(input,19,FOLLOW_19_in_deviceDecl200); 
            string_literal22_tree = (CommonTree)adaptor.create(string_literal22);
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal22_tree, root_0);

            pushFollow(FOLLOW_deviceName_in_deviceDecl203);
            deviceName23=deviceName();

            state._fsp--;

            adaptor.addChild(root_0, deviceName23.getTree());
            string_literal24=(Token)match(input,14,FOLLOW_14_in_deviceDecl205); 
            pushFollow(FOLLOW_attrDecl_in_deviceDecl210);
            attrDecl25=attrDecl();

            state._fsp--;

            adaptor.addChild(root_0, attrDecl25.getTree());
            string_literal26=(Token)match(input,15,FOLLOW_15_in_deviceDecl214); 
            string_literal26_tree = (CommonTree)adaptor.create(string_literal26);
            adaptor.addChild(root_0, string_literal26_tree);

            pushFollow(FOLLOW_pinDecl_in_deviceDecl218);
            pinDecl27=pinDecl();

            state._fsp--;

            adaptor.addChild(root_0, pinDecl27.getTree());
            string_literal28=(Token)match(input,16,FOLLOW_16_in_deviceDecl222); 
            char_literal29=(Token)match(input,17,FOLLOW_17_in_deviceDecl225); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "deviceDecl"

    public static class netDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "netDecl"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:76:1: netDecl : 'net' ( width )? ( netName ',' )* netName ( ':' ( netAttr ',' )* netAttr )? ';' ;
    public final PHDLParser.netDecl_return netDecl() throws RecognitionException {
        PHDLParser.netDecl_return retval = new PHDLParser.netDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal30=null;
        Token char_literal33=null;
        Token char_literal35=null;
        Token char_literal37=null;
        Token char_literal39=null;
        PHDLParser.width_return width31 = null;

        PHDLParser.netName_return netName32 = null;

        PHDLParser.netName_return netName34 = null;

        PHDLParser.netAttr_return netAttr36 = null;

        PHDLParser.netAttr_return netAttr38 = null;


        CommonTree string_literal30_tree=null;
        CommonTree char_literal33_tree=null;
        CommonTree char_literal35_tree=null;
        CommonTree char_literal37_tree=null;
        CommonTree char_literal39_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:2: ( 'net' ( width )? ( netName ',' )* netName ( ':' ( netAttr ',' )* netAttr )? ';' )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:4: 'net' ( width )? ( netName ',' )* netName ( ':' ( netAttr ',' )* netAttr )? ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal30=(Token)match(input,20,FOLLOW_20_in_netDecl240); 
            string_literal30_tree = (CommonTree)adaptor.create(string_literal30);
            adaptor.addChild(root_0, string_literal30_tree);

            // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:10: ( width )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==23) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:11: width
                    {
                    pushFollow(FOLLOW_width_in_netDecl243);
                    width31=width();

                    state._fsp--;

                    adaptor.addChild(root_0, width31.getTree());

                    }
                    break;

            }

            // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:19: ( netName ',' )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==IDENT) ) {
                    int LA5_1 = input.LA(2);

                    if ( (LA5_1==COMMA) ) {
                        alt5=1;
                    }


                }


                switch (alt5) {
            	case 1 :
            	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:20: netName ','
            	    {
            	    pushFollow(FOLLOW_netName_in_netDecl248);
            	    netName32=netName();

            	    state._fsp--;

            	    adaptor.addChild(root_0, netName32.getTree());
            	    char_literal33=(Token)match(input,COMMA,FOLLOW_COMMA_in_netDecl250); 
            	    char_literal33_tree = (CommonTree)adaptor.create(char_literal33);
            	    adaptor.addChild(root_0, char_literal33_tree);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            pushFollow(FOLLOW_netName_in_netDecl254);
            netName34=netName();

            state._fsp--;

            adaptor.addChild(root_0, netName34.getTree());
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:42: ( ':' ( netAttr ',' )* netAttr )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==21) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:43: ':' ( netAttr ',' )* netAttr
                    {
                    char_literal35=(Token)match(input,21,FOLLOW_21_in_netDecl257); 
                    char_literal35_tree = (CommonTree)adaptor.create(char_literal35);
                    adaptor.addChild(root_0, char_literal35_tree);

                    // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:47: ( netAttr ',' )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==STRING_LITERAL) ) {
                            int LA6_1 = input.LA(2);

                            if ( (LA6_1==COMMA) ) {
                                alt6=1;
                            }


                        }


                        switch (alt6) {
                    	case 1 :
                    	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:83:48: netAttr ','
                    	    {
                    	    pushFollow(FOLLOW_netAttr_in_netDecl260);
                    	    netAttr36=netAttr();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, netAttr36.getTree());
                    	    char_literal37=(Token)match(input,COMMA,FOLLOW_COMMA_in_netDecl262); 
                    	    char_literal37_tree = (CommonTree)adaptor.create(char_literal37);
                    	    adaptor.addChild(root_0, char_literal37_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);

                    pushFollow(FOLLOW_netAttr_in_netDecl266);
                    netAttr38=netAttr();

                    state._fsp--;

                    adaptor.addChild(root_0, netAttr38.getTree());

                    }
                    break;

            }

            char_literal39=(Token)match(input,17,FOLLOW_17_in_netDecl270); 
            char_literal39_tree = (CommonTree)adaptor.create(char_literal39);
            adaptor.addChild(root_0, char_literal39_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "netDecl"

    public static class netAttr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "netAttr"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:87:1: netAttr : STRING_LITERAL ;
    public final PHDLParser.netAttr_return netAttr() throws RecognitionException {
        PHDLParser.netAttr_return retval = new PHDLParser.netAttr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRING_LITERAL40=null;

        CommonTree STRING_LITERAL40_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:88:2: ( STRING_LITERAL )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:88:4: STRING_LITERAL
            {
            root_0 = (CommonTree)adaptor.nil();

            STRING_LITERAL40=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_netAttr283); 
            STRING_LITERAL40_tree = (CommonTree)adaptor.create(STRING_LITERAL40);
            adaptor.addChild(root_0, STRING_LITERAL40_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "netAttr"

    public static class attrDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attrDecl"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:91:1: attrDecl : ( attrAssignment )* ;
    public final PHDLParser.attrDecl_return attrDecl() throws RecognitionException {
        PHDLParser.attrDecl_return retval = new PHDLParser.attrDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        PHDLParser.attrAssignment_return attrAssignment41 = null;



        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:92:2: ( ( attrAssignment )* )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:92:4: ( attrAssignment )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\phdl\\src\\phdl\\PHDL.g:92:4: ( attrAssignment )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==IDENT) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // C:\\work\\phdl\\src\\phdl\\PHDL.g:92:4: attrAssignment
            	    {
            	    pushFollow(FOLLOW_attrAssignment_in_attrDecl295);
            	    attrAssignment41=attrAssignment();

            	    state._fsp--;

            	    adaptor.addChild(root_0, attrAssignment41.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "attrDecl"

    public static class pinDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pinDecl"
    // C:\\work\\phdl\\src\\phdl\\PHDL.g:95:1: pinDecl : ( ( type ( width )? ( pinName ',' )* pinName )+ '=' pinNumberList ';' )* ;
    public final PHDLParser.pinDecl_return pinDecl() throws RecognitionException {
        PHDLParser.pinDecl_return retval = new PHDLParser.pinDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal45=null;
        Token char_literal47=null;
        Token char_literal49=null;
        PHDLParser.type_return type42 = null;

        PHDLParser.width_return width43 = null;

        PHDLParser.pinName_return pinName44 = null;

        PHDLParser.pinName_return pinName46 = null;

        PHDLParser.pinNumberList_return pinNumberList48 = null;


        CommonTree char_literal45_tree=null;
        CommonTree char_literal47_tree=null;
        CommonTree char_literal49_tree=null;

        try {
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:96:2: ( ( ( type ( width )? ( pinName ',' )* pinName )+ '=' pinNumberList ';' )* )
            // C:\\work\\phdl\\src\\phdl\\PHDL.g:96:4: ( ( type ( width )? ( pinName ',' )* pinName )+ '=' pinNumberList ';' )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\phdl\\src\\phdl\\PHDL.g:96:4: ( ( type ( width )? ( pinName ',' )* pinName )+ '=' pinNumberList ';' )*
            loop12:
